feat(i18n): localize church instance interfaces
